...
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="yOw-me-mWG">
                                        <rect key="frame" x="15" y="0.0" width="778" height="90"/>
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="VEL-re-XfV">
                                                <rect key="frame" x="0.0" y="0.0" width="778" height="30"/>
                                                <subviews>
                                                    <imageView clipsSubviews="YES" multipleTouchEnabled="YES" tag="4" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="terrible" translatesAutoresizingMaskIntoConstraints="NO" id="MHE-4j-X35">
                                                        <rect key="frame" x="0.0" y="0.0" width="155.66666666666666" height="30"/>
                                                    </imageView>
                                                    <imageView clipsSubviews="YES" multipleTouchEnabled="YES" tag="3" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bad" translatesAutoresizingMaskIntoConstraints="NO" id="Oso-n0-SLr">
                                                        <rect key="frame" x="155.66666666666669" y="0.0" width="155.66666666666669" height="30"/>
                                                    </imageView>
                                                    <imageView clipsSubviews="YES" multipleTouchEnabled="YES" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="meh" translatesAutoresizingMaskIntoConstraints="NO" id="y6k-Xb-g0a">
                                                        <rect key="frame" x="311.33333333333331" y="0.0" width="155.33333333333331" height="30"/>
                                                    </imageView>
                                                    <imageView clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="good" translatesAutoresizingMaskIntoConstraints="NO" id="UDX-5m-69w">
                                                        <rect key="frame" x="466.66666666666669" y="0.0" width="155.66666666666669" height="30"/>
                                                    </imageView>
                                                    <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="great" translatesAutoresizingMaskIntoConstraints="NO" id="5XL-nc-oMm">
                                                        <rect key="frame" x="622.33333333333337" y="0.0" width="155.66666666666663" height="30"/>
                                                    </imageView>
                                                </subviews>
                                            </stackView>
                                            <slider opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="0.0" maxValue="5" translatesAutoresizingMaskIntoConstraints="NO" id="Qva-iw-efA" customClass="Custo
                                                <rect key="frame" x="-2" y="60" width="782" height="31"/>
...
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d1w-P6-8nd">
                                <rect key="frame" x="387" y="344" width="122" height="41"/>
                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                <inset key="contentEdgeInsets" minX="20" minY="10" maxX="20" maxY="10"/>
                                <state key="normal" title="Next Item">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <real key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
