...
                    isperson1DonePlaying = true
                    currentItemIndex = 0
                    startCompatibilityRound()
                case (true, false):
                    isperson2DonePlaying = true
                    currentItemIndex = 0
                    Alert.showBasic(title: "Results", message: "you two are \(calculateCompatibility()) compatible", vc: self)
                    startCompatibility()
                default:
                    Alert.showBasic(title: "Logic Error", message: "Please contact Developer", vc: self)
            }
        }
    }
...
